2002-05-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* assertion.C, assertion.h: New utility.
	* Makefile (OTHER): Added it.
	* main.C (main): Register treelog.

2002-05-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.29 released.

2002-05-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* om.C, om.h (water_factor, heat_factor): Fixed initialization
	bug. 

	* macro_std.C (height_start, height_end): Made them optional.
	(check_alist): New checks.
	* txt/tutorial.tex (subsection{Macropores}): Updated.

	* om.C (tock): Spelling fix in comment.

2002-05-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.28 released.

2002-05-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_tillage.C (ActionMixSyntax): Fix default value for
	penetration (used to be 0 for some reason). 

2002-05-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* organic_matter.C (find_abiotic): New functions.
	(tick): Use it.

2002-05-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* om.h, om.C (heat_factor, water_factor): New parameters.
	(heat_turnover_factor, water_turnover_factor): New member functions.

	* production.C (initialize): Added assertions.
	* organic_matter.C (add): Check that we don't add the same am twice.
	* crop_std.C (tick): Only add am pools to organic matter if
	newly created.
	* vegetation_crops.C (sow): Add error for duplicate crops.

2002-05-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/chemistry.dai: Update all parameterizations.

	* chemicals.C (canopy_update): New formula.
	* chemical_std.C (canopy_washoff_coefficient): Update dimension. 

2002-05-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crop_std.C (harvest): Also cut back development stage for old
	crops who are low for some reason (like lack of WStem).

2002-05-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C, root_system.h (water_uptake): New `day_fraction'
	parameter.
	* crop.h, crop_std.C, crop_simple.C, crop_old.C, crop_sold.C
	(ActualWaterUptake): Ditto.