@@ -1,5 +1,8 @@
 2002-05-23  Per Abrahamsen  <abraham@dina.kvl.dk>
 
+	* treelog.h, treelog_dual.h, treelog_dual.C, treelog_stream.h,
+	treelog_stream.C (flush):  New virtual member function.
+
 	* assertion.C, assertion.h: New utility.
 	* Makefile (OTHER): Added it.
 	* main.C (main): Register treelog.
